McStas-2.5_CPU_MPICC/Test_Pol_Bender/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Bender_20200226_192113"
INFO: Regenerating c-file: Test_Pol_Bender.c
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopUpPar={ 0.99 , 0.0219 , 6.07 , 3.0 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopDownPar={ 0.99 , 0.0219 , 6.07 , 2.0 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Bender.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_bender.comp:140:19: warning: ISO C99 requires whitespace after the macro name
 %{
                   ^
INFO: ===
[n-62-31-16:212958] mca_base_component_repository_open: unable to open mca_plm_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[n-62-31-16:212958] mca_base_component_repository_open: unable to open mca_ras_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
--------------------------------------------------------------------------
By default, for Open MPI 4.0 and later, infiniband ports on a device
are not used by default.  The intent is to use UCX for these devices.
You can override this policy by setting the btl_openib_allow_ib MCA parameter
to true.

  Local host:              n-62-31-16
  Local adapter:           mlx5_0
  Local port:              1

--------------------------------------------------------------------------
--------------------------------------------------------------------------
WARNING: There was an error initializing an OpenFabrics device.

  Local host:   n-62-31-16
  Local device: mlx5_0
--------------------------------------------------------------------------
begin instrument: Test_Pol_Bender
  Creator: McStas 2.5 - Feb. 26, 2020
  Source: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Parameters:  GUIDELENGTH(double) GUIDERADIUS(double) ENDOPTION(int) NSLITS(int) WSPACER(double) DRAWOPTION(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Feb. 26, 2020
  Instrument: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1582954234
  Directory: .
  Param: GUIDELENGTH=1
  Param: GUIDERADIUS=10
  Param: ENDOPTION=0
  Param: NSLITS=5
  Param: WSPACER=0.005
  Param: DRAWOPTION=1
end simulation
info!
